--- a/src/Data/style.css
+++ b/src/Data/style.css
@@ -2,6 +2,11 @@
     width: 100%;
 }
 
+.table {
+    width: 100%;
+    border: 2px solid red;
+}
+
 .side-by-side {
     display:flex;
     padding: 20px;
