style: table scrolling

--- a/src/Data/style.css
+++ b/src/Data/style.css
@@ -4,7 +4,12 @@ p {
 
 table {
     width: 100%;
-    overflow: scroll;
+    overflow-x: auto;
+}
+
+.table {
+    min-width: auto;
+    overflow-x: auto;
 }
 
 .data {
